[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/objects/pickable_items/equipment/consumable/medical/medical.gd" type="Script" id=1]
[ext_resource path="res://scenes/objects/pickable_items/equipment/_equipment_item.tscn" type="PackedScene" id=2]

[node name="MedicalItem" instance=ExtResource( 2 )]
script = ExtResource( 1 )
item_size = 0
item_name = "Medical Equipment"
heal_amount = 10
speed_boost = 0
time_to_use = 5
max_charges_held = 1
max_charges_usable_at_once = 1

[node name="UseTime" type="Timer" parent="." index="3"]
wait_time = 5.0

[connection signal="timeout" from="UseTime" to="." method="_on_UseTime_timeout"]
